--- a/src/WirePeep/App.xaml
+++ b/src/WirePeep/App.xaml
@@ -1,9 +1,5 @@
 ﻿<Application x:Class="WirePeep.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WirePeep"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:local="clr-namespace:WirePeep">
 </Application>
