--- a/src/WirePeep/OptionsDialog.xaml
+++ b/src/WirePeep/OptionsDialog.xaml
@@ -1,12 +1,12 @@
 ﻿<m:ExtendedDialog x:Class="WirePeep.OptionsDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:m="http://menees.com/xaml"
-        xmlns:local="clr-namespace:WirePeep"
-        mc:Ignorable="d"
-        Title="Options" Width="400" SizeToContent="Height"
+		xmlns:local="clr-namespace:WirePeep"
+		mc:Ignorable="d"
+		Title="Options" Width="400" SizeToContent="Height"
 		FocusManager.FocusedElement="{Binding ElementName=runAtLogin}">
 	<Window.Resources>
 		<Style x:Key="GroupBoxStyle" TargetType="GroupBox">
@@ -15,7 +15,7 @@
 		</Style>
 	</Window.Resources>
 
-    <Grid>
+	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition/>
 			<RowDefinition/>
@@ -25,10 +25,23 @@
 
 		<GroupBox Header="Application" Grid.Row="0" Style="{StaticResource GroupBoxStyle}"  Margin="12,6,12,12">
 			<StackPanel>
-				<CheckBox x:Name="runAtLogin" Content="Run when user logs in"/>
-				<CheckBox x:Name="startMinimized" Content="Start minimized"/>
+				<StackPanel Orientation="Horizontal">
+					<CheckBox x:Name="runAtLogin" Content="Run when user logs in"/>
+					<CheckBox x:Name="autoStartMinimized" Content="And start minimized" Margin="6,0,0,0">
+						<CheckBox.Style>
+							<Style TargetType="CheckBox">
+								<Style.Triggers>
+									<DataTrigger Binding="{Binding IsChecked, ElementName=runAtLogin}" Value="False">
+										<Setter Property="IsEnabled" Value="False"/>
+									</DataTrigger>
+								</Style.Triggers>
+							</Style>
+						</CheckBox.Style>
+					</CheckBox>
+				</StackPanel>
 				<CheckBox x:Name="minimizeToTray" Content="Minimize to notification tray"/>
 				<CheckBox x:Name="alwaysOnTop" Content="Always on top"/>
+				<CheckBox x:Name="confirmClose" Content="Confirm exit"/>
 			</StackPanel>
 		</GroupBox>
 
@@ -53,10 +66,10 @@
 					</TextBlock.TextDecorations>
 				</TextBlock>
 				<TextBlock Grid.Row="0" Grid.Column="1" Text="On Failure">
-                    <TextBlock.TextDecorations>
-                        <TextDecoration/>
-                    </TextBlock.TextDecorations>
-                </TextBlock>
+					<TextBlock.TextDecorations>
+						<TextDecoration/>
+					</TextBlock.TextDecorations>
+				</TextBlock>
 				<TextBlock Grid.Row="0" Grid.Column="2" Text="On Reconnect">
 					<TextBlock.TextDecorations>
 						<TextDecoration/>
